switched to use liquibase instead of flyway

--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -1,6 +1,6 @@
 spring.thymeleaf.cache=false
 
-flyway.enabled=false
+liquibase.enabled=false
 
 fredbet.database-url=jdbc:mariadb://localhost:3306/fredbetdb
 fredbet.database-username=fredbet
