--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.thymeleaf.cache=true
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 
-flyway.enabled=true
+liquibase.enabled=true
+liquibase.change-log=classpath:db/changelog/liquibase-changelog.xml
 
 spring.h2.console.enabled=false
 
