--- a/pom.xml
+++ b/pom.xml
@@ -167,8 +167,9 @@
 			<artifactId>thymeleaf-extras-java8time</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>3.5.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.zaxxer</groupId>
