--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,6 @@ fredbet.database-url=
 fredbet.database-username=
 fredbet.database-password=
 fredbet.database-type=h2
+
+# only for testing
+# spring.jpa.hibernate.ddl-auto=create-drop
