--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ liquibase.change-log=classpath:db/changelog/liquibase-changelog.xml
 spring.h2.console.enabled=false
 
 # possible values: none, validate, update, create, create-drop
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 
 # for actuator
 management.context-path=/manage
