--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>de.fred4jupiter.fredbet</groupId>
 	<artifactId>fredbet</artifactId>
-	<version>1.2.2-SNAPSHOT</version>
+	<version>1.2.3-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
@@ -14,6 +14,7 @@
 	<description>Simple football betting application.</description>
 
 	<scm>
+		<developerConnectionUrl>scm:git:https://github.com/fred4jupiter/fredbet.git</developerConnectionUrl>
 		<connection>scm:git:https://github.com/fred4jupiter/fredbet.git</connection>
 	</scm>
 
