--- a/src/docker/docker-compose/mariadb/docker-compose.yml
+++ b/src/docker/docker-compose/mariadb/docker-compose.yml
@@ -21,6 +21,7 @@ services:
         - "8080:8080"
       environment:
        - spring.profiles.active=prod
+       - fredbet.database-type=maria-db
        - FREDBET_DATABASE-URL=jdbc:mariadb://mariadb:3306/fredbetdb
        - FREDBET_DATABASE-USERNAME=fred
        - FREDBET_DATABASE-PASSWORD=fred
