--- a/src/docker/docker-compose/with_graylog/docker-compose.yml
+++ b/src/docker/docker-compose/with_graylog/docker-compose.yml
@@ -19,6 +19,7 @@ fredbet:
     - "8080:8080"
   environment:
    - spring.profiles.active=test
+   - fredbet.database-type=maria-db
    - JDBC_URL=jdbc:mariadb://mariadb:3306/fredbetdb
    - JDBC_USERNAME=fred
    - JDBC_PASSWORD=fred  
