added docker email

--- a/circle.yml
+++ b/circle.yml
@@ -22,5 +22,5 @@ deployment:
   hub:
     branch: master
     commands:
-      - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - docker push hamsterhase/fredbet
