making password for password rest configurable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ fredbet.image-location=file-system
 
 # set folder where you want to store images to (defaults to user tmp dir)
 fredbet.image-file-sytem-base-folder=
+
+# password used for user password rest
+fredbet.password-for-reset=fredbet
