--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,12 @@
 			<artifactId>commons-compress</artifactId>
 			<version>1.12</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-aws-context</artifactId>
+			<version>1.1.3.RELEASE</version>
+		</dependency>
+
 		<!-- <dependency> -->
 		<!-- <groupId>com.google.guava</groupId> -->
 		<!-- <artifactId>guava</artifactId> -->
