--- a/pom.xml
+++ b/pom.xml
@@ -186,11 +186,19 @@
 			<artifactId>commons-compress</artifactId>
 			<version>1.12</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-aws-context</artifactId>
 			<version>1.1.3.RELEASE</version>
 		</dependency>
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.cloud</groupId> -->
+<!-- 			<artifactId>spring-cloud-aws-autoconfigure</artifactId> -->
+<!-- 			<version>1.1.3.RELEASE</version> -->
+<!-- 		</dependency> -->
+		
 
 		<!-- <dependency> -->
 		<!-- <groupId>com.google.guava</groupId> -->
@@ -328,6 +336,10 @@
 							<includes>
 								<include>**/*UT.java</include>
 							</includes>
+							<excludes>
+								<!-- Manual tests will be excluded -->
+								<exclude>**/*MT.java</exclude>
+							</excludes>
 						</configuration>
 					</plugin>
 					<plugin>
@@ -337,6 +349,10 @@
 							<includes>
 								<include>**/*IT.java</include>
 							</includes>
+							<excludes>
+								<!-- Manual tests will be excluded -->
+								<exclude>**/*MT.java</exclude>
+							</excludes>
 						</configuration>
 						<executions>
 							<execution>
@@ -365,6 +381,8 @@
 							<excludes>
 								<exclude>**/*UT.java</exclude>
 								<exclude>**/*IT.java</exclude>
+								<!-- Manual tests will be excluded -->
+								<exclude>**/*MT.java</exclude>
 							</excludes>
 						</configuration>
 					</plugin>
