--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,4 @@ fredbet.image-file-sytem-base-folder=
 # password used for user password rest
 fredbet.password-for-reset=fredbet
 
-fredbet.access-key=
-fredbet.secret-access-key=
-fredbet.region=
-fredbet.bucket=
+fredbet.bucket=mis-demo
