update aws config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ fredbet.favourite-country=germany
 
 fredbet.image-size=1920
 fredbet.thumbnail-size=75
-fredbet.image-location=aws-s3
+fredbet.image-location=file-system
 
 # set folder where you want to store images to (defaults to user tmp dir)
 fredbet.image-file-sytem-base-folder=
@@ -39,4 +39,7 @@ fredbet.password-for-reset=fredbet
 
 fredbet.bucket=mis-demo
 
+# These are the spring cloud AWS autoconfigure properties
+cloud.aws.credentials.accessKey=
+cloud.aws.credentials.secretKey=
 cloud.aws.region.static=eu-central-1
