--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,4 @@ fredbet.bucket=mis-demo
 cloud.aws.credentials.accessKey=
 cloud.aws.credentials.secretKey=
 cloud.aws.region.static=eu-central-1
+cloud.aws.stack.auto=false
