--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,10 +37,10 @@ fredbet.image-file-sytem-base-folder=
 # password used for user password rest
 fredbet.password-for-reset=fredbet
 
-fredbet.bucket=mis-demo
+fredbet.aws-s3bucket-name=mis-demo
 
-# These are the spring cloud AWS autoconfigure properties
+# These are the spring cloud AWS autoconfigure properties. Set the access key and secret key as environment variables.
 cloud.aws.credentials.accessKey=
 cloud.aws.credentials.secretKey=
 cloud.aws.region.static=eu-central-1
-cloud.aws.stack.auto=false
+# cloud.aws.stack.auto=false
