--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,9 +29,9 @@ fredbet.favourite-country=germany
 
 fredbet.image-size=1920
 fredbet.thumbnail-size=75
-fredbet.image-location=aws-s3
+fredbet.image-location=file-system
 
-# set folder where you want to store images to (defaults to user tmp dir)
+# set folder where you want to store images to (defaults to user home dir)
 fredbet.image-file-sytem-base-folder=
 
 # password used for user password rest
