--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -5,3 +5,4 @@ liquibase.enabled=false
 fredbet.database-url=jdbc:mariadb://localhost:3306/fredbetdb
 fredbet.database-username=fredbet
 fredbet.database-password=fredbet
+fredbet.database-type=maria-db
