--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,4 +4,4 @@ spring.h2.console.enabled=false
 fredbet.database-url=
 fredbet.database-username=
 fredbet.database-password=
-fredbet.database-type=h2
+fredbet.database-type=mysql
