--- a/pom.xml
+++ b/pom.xml
@@ -187,19 +187,19 @@
 			<version>1.12</version>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework.cloud</groupId> -->
-<!-- 			<artifactId>spring-cloud-aws-context</artifactId> -->
-<!-- 			<version>1.1.3.RELEASE</version> -->
-<!-- 		</dependency> -->
-		
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework.cloud</groupId> -->
+		<!-- <artifactId>spring-cloud-aws-context</artifactId> -->
+		<!-- <version>1.1.3.RELEASE</version> -->
+		<!-- </dependency> -->
+
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-aws-autoconfigure</artifactId>
 			<version>1.1.3.RELEASE</version>
 		</dependency>
-		
+
 
 		<!-- <dependency> -->
 		<!-- <groupId>com.google.guava</groupId> -->
@@ -216,6 +216,12 @@
 		<!-- <groupId>org.apache.tomcat.embed</groupId> -->
 		<!-- <artifactId>tomcat-embed-el</artifactId> -->
 		<!-- </dependency> -->
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.15</version>
+		</dependency>
 
 		<!-- Test dependencies -->
 		<dependency>
