--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ spring.thymeleaf.cache=false
 # connect in console (http://localhost:8080/console) with jdbcUrl: jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 
-fredbet.create-demo-data=true
+fredbet.create-demo-data=false
 fredbet.enable-demo-data-creation-navigation-entry=true
 
 fredbet.database-url=jdbc:h2:mem:fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
