update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 install: true
 script:  
-  - docker build -t fred4jupiter/fredbet build
+  - docker build -t fred4jupiter/fredbet .
   - docker login --username="$DOCKER_USERNAME" --password="$DOCKER_PASSWORD"
   - docker push fred4jupiter/fredbet
   - docker tag fred4jupiter/fredbet registry.heroku.com/fred4jupiter/fredbet
