update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+cache:
+  directories:
+    - $HOME/.m2
 sudo: required
 language: java
 jdk:
@@ -8,8 +11,6 @@ install:
   - mvn verify
 script:  
   - docker build -t fred4jupiter/fredbet .
-  - docker login --username="$DOCKER_USERNAME" --password="$DOCKER_PASSWORD"
-  - docker push fred4jupiter/fredbet
   - docker tag fred4jupiter/fredbet registry.heroku.com/fred4jupiter/fredbet
   - docker login --username=_ --password="$HEROKU_AUTH_TOKEN" registry.heroku.com
   - docker push registry.heroku.com/fred4jupiter/fredbet
