using spring-cloud-starter-aws dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,4 @@ cloud.aws.credentials.accessKey=
 cloud.aws.credentials.secretKey=
 cloud.aws.region.static=eu-central-1
 # cloud.aws.stack.auto=false
+cloud.aws.credentials.instanceProfile = false
