changed MB value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.profiles.active=dev
 # Session timeout in seconds. For testing
 # server.session.timeout=1
 
-spring.http.multipart.max-file-size=10Mb
+spring.http.multipart.max-file-size=10MB
 
 # application specific properties
 fredbet.create-demo-data=false
