--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,8 +7,8 @@ spring.h2.console.enabled=true
 fredbet.create-demo-data=true
 fredbet.enable-demo-data-creation-navigation-entry=true
 
-# fredbet.database-url=jdbc:h2:mem:fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-fredbet.database-url=jdbc:h2:file:~/fredbet/fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+fredbet.database-url=jdbc:h2:mem:fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+# fredbet.database-url=jdbc:h2:file:~/fredbet/fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 fredbet.database-username=sa
 fredbet.database-password=
 fredbet.database-type=h2
