--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,5 +43,6 @@ fredbet.aws-s3bucket-name=mis-demo
 cloud.aws.credentials.accessKey=
 cloud.aws.credentials.secretKey=
 cloud.aws.region.static=eu-central-1
-# cloud.aws.stack.auto=false
+cloud.aws.stack.auto=false
 cloud.aws.credentials.instanceProfile = false
+
