update properties and create default image group even in prod profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,9 +40,9 @@ fredbet.password-for-reset=fredbet
 fredbet.aws-s3bucket-name=mis-demo
 
 # These are the spring cloud AWS autoconfigure properties. Set the access key and secret key as environment variables.
-cloud.aws.credentials.accessKey=
-cloud.aws.credentials.secretKey=
+#cloud.aws.credentials.accessKey=
+#cloud.aws.credentials.secretKey=
 cloud.aws.region.static=eu-central-1
 cloud.aws.stack.auto=false
-cloud.aws.credentials.instanceProfile = false
+cloud.aws.credentials.instanceProfile = true
 
