--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,10 +39,10 @@ fredbet.password-for-reset=fredbet
 
 fredbet.aws-s3bucket-name=mis-demo
 
-# These are the spring cloud AWS autoconfigure properties. Set the access key and secret key as environment variables.
+# Set the access key and secret key with these environment variables as system properties if you use S3 but are outside of an EC2 instance.
 #cloud.aws.credentials.accessKey=
 #cloud.aws.credentials.secretKey=
 cloud.aws.region.static=eu-central-1
 cloud.aws.stack.auto=false
 cloud.aws.credentials.instanceProfile = true
-
+cloud.aws.credentials.profileName = ecsInstanceRole
