making extra betting points configurable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,10 @@ fredbet.password-for-reset=fredbet
 
 fredbet.aws-s3bucket-name=mis-demo
 
+# setting points for the extra bets
+fredbet.points-final-winner=10
+fredbet.points-semi-final-winner=5
+
 # Set the access key and secret key with these environment variables as system properties if you use S3 but are outside of an EC2 instance.
 #cloud.aws.credentials.accessKey=
 #cloud.aws.credentials.secretKey=
