--- a/pom.xml
+++ b/pom.xml
@@ -254,7 +254,12 @@
 			<version>2.0.0.0</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit-junit</artifactId>
+			<version>0.4.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
