added extra bet for third

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,7 @@ fredbet.aws-s3bucket-name=mis-demo
 # setting points for the extra bets
 fredbet.points-final-winner=10
 fredbet.points-semi-final-winner=5
+fredbet.points-third-final-winner=2
 
 # Set the access key and secret key with these environment variables as system properties if you use S3 but are outside of an EC2 instance.
 #cloud.aws.credentials.accessKey=
