--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ cache:
   directories:
   - "$HOME/.m2/repository"
 sudo: required
+services:
+  - docker
 language: java
 jdk:
 - oraclejdk8
@@ -15,3 +17,8 @@ deploy:
 branches:
   only:
   - master
+after_success:
+  - docker login -u $DOCKER_USER -p $DOCKER_PASS
+  - docker build -t fred4jupiter/fredbet .  
+  - docker tag fred4jupiter/fredbet hamsterhase/fredbet:latest  
+  - docker push hamsterhase/fredbet:latest
