added excel export

--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -2,7 +2,7 @@ spring.thymeleaf.cache=false
 
 liquibase.enabled=false
 
-fredbet.database-url=jdbc:mariadb://localhost:3306/fredbetdb
+fredbet.database-url=jdbc:mysql://localhost:3306/fredbet
 fredbet.database-username=fredbet
 fredbet.database-password=fredbet
-fredbet.database-type=maria-db
+fredbet.database-type=mysql
