--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,19 @@
 
 	<groupId>de.fred4jupiter.fredbet</groupId>
 	<artifactId>fredbet</artifactId>
-	<version>1.5.4-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
 	<name>Fredbet</name>
 
-	<description>Simple football betting application. </description>
+	<description>Simple football betting application.</description>
+
+	<contributors>
+		<contributor>
+			<name>Michael Stähler</name>						
+		</contributor>
+	</contributors>
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/fred4jupiter/fredbet.git</developerConnection>
@@ -309,7 +315,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>			
+			</plugin>
 		</plugins>
 	</build>
 
