--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,14 +19,23 @@ management.context-path=/manage
 
 spring.http.multipart.max-file-size=10MB
 
-# application specific properties
+# Set the access key and secret key with these environment variables as system properties if you use S3 but are outside of an EC2 instance.
+#cloud.aws.credentials.accessKey=
+#cloud.aws.credentials.secretKey=
+cloud.aws.region.static=eu-central-1
+cloud.aws.stack.auto=false
+cloud.aws.credentials.instanceProfile = true
+cloud.aws.credentials.profileName = ecsInstanceRole
+
+# -------- fredbet properties ------------------------------------------------------------------------------
+
 fredbet.create-demo-data=false
 fredbet.enable-demo-data-creation-navigation-entry=false
 fredbet.favourite-country=germany
 
 fredbet.image-size=1920
 fredbet.thumbnail-size=75
-fredbet.image-location=file-system
+fredbet.image-location=file_system
 
 # set folder where you want to store images to (defaults to user home dir)
 fredbet.image-file-sytem-base-folder=
@@ -41,10 +50,4 @@ fredbet.points-final-winner=10
 fredbet.points-semi-final-winner=5
 fredbet.points-third-final-winner=2
 
-# Set the access key and secret key with these environment variables as system properties if you use S3 but are outside of an EC2 instance.
-#cloud.aws.credentials.accessKey=
-#cloud.aws.credentials.secretKey=
-cloud.aws.region.static=eu-central-1
-cloud.aws.stack.auto=false
-cloud.aws.credentials.instanceProfile = true
-cloud.aws.credentials.profileName = ecsInstanceRole
+
