update readme; refactored docker compose files

--- a/src/docker/docker-compose/mariadb.yml
+++ b/src/docker/docker-compose/mariadb.yml
@@ -1,8 +1,9 @@
-version: '3'
-
+version: "3"
 services:
-    mysqldb:  
-      image: mysql:8.0.2
+    mariadb:  
+      image: mariadb:10.1.11
+      volumes:
+        - ~/mariadb:/var/lib/mysql
       ports:
         - "3306:3306"
       environment:
@@ -11,16 +12,16 @@ services:
        - MYSQL_USER=fred
        - MYSQL_PASSWORD=fred
     fredbet:
-      image: hamsterhase/fredbet:latest
+      image: fred4jupiter/fredbet
       links:
-        - mysqldb
+        - mariadb:mariadb
       depends_on:
-        - mysqldb
+        - mariadb
       ports:
-        - "8081:8080"
+        - "8080:8080"
       environment:
        - SPRING_PROFILES_ACTIVE=prod
-       - FREDBET_DATABASE_URL=jdbc:mysql://mysqldb:3306/fredbetdb
+       - FREDBET_DATABASE_TYPE=maria-db
+       - FREDBET_DATABASE_URL=jdbc:mariadb://mariadb:3306/fredbetdb
        - FREDBET_DATABASE_USERNAME=fred
        - FREDBET_DATABASE_PASSWORD=fred
-       - FREDBET_DATABASE_TYPE=mysql
