--- a/src/docker/docker-compose/mariadb_graylog.yml
+++ b/src/docker/docker-compose/mariadb_graylog.yml
@@ -1,41 +1,44 @@
-mariadb:  
-  image: mariadb:10.1.11
-  volumes:
-    - /data/db
-  ports:
-    - "3306:3306"
-  environment:
-   - MYSQL_DATABASE=fredbetdb
-   - MYSQL_ROOT_PASSWORD=secred
-   - MYSQL_USER=fred
-   - MYSQL_PASSWORD=fred
+version: '3'
+services:
+    mariadb:  
+      image: mariadb:10.1.11
+      volumes:
+        - /data/db
+      ports:
+        - "3306:3306"
+      environment:
+       - MYSQL_DATABASE=fredbetdb
+       - MYSQL_ROOT_PASSWORD=secred
+       - MYSQL_USER=fred
+       - MYSQL_PASSWORD=fred
 
-fredbet:
-  image: fred4jupiter/fredbet
-  links:
-    - mariadb:mariadb
-    - graylog
-  ports:
-    - "8080:8080"
-  environment:
-   - spring.profiles.active=test
-   - fredbet.database-type=maria-db
-   - JDBC_URL=jdbc:mariadb://mariadb:3306/fredbetdb
-   - JDBC_USERNAME=fred
-   - JDBC_PASSWORD=fred  
-  log_driver: "gelf"
-  log_opt:
-    gelf-address: "udp://0.0.0.0:12203"   
+    fredbet:
+      image: fred4jupiter/fredbet
+      links:
+        - mariadb:mariadb
+        - graylog
+      ports:
+        - "8080:8080"
+      environment:
+       - spring.profiles.active=test
+       - fredbet.database-type=maria-db
+       - JDBC_URL=jdbc:mariadb://mariadb:3306/fredbetdb
+       - JDBC_USERNAME=fred
+       - JDBC_PASSWORD=fred  
+      logging:
+        driver: gelf
+        options:
+          gelf-address: "udp://0.0.0.0:12203"      
 
-graylog:
-  image: graylog2/allinone
-  environment:    
-    GRAYLOG_USERNAME: admin
-    GRAYLOG_PASSWORD: admin
-    GRAYLOG_TIMEZONE: Europe/Berlin
-    GRAYLOG_SERVER_SECRET:    
-  ports:
-    - "9000:9000"
-    - "12201:12201"
-    - "12202:12202"
-    - "12203:12203"
+    graylog:
+      image: graylog2/allinone
+      environment:    
+        GRAYLOG_USERNAME: admin
+        GRAYLOG_PASSWORD: admin
+        GRAYLOG_TIMEZONE: Europe/Berlin
+        GRAYLOG_SERVER_SECRET:    
+      ports:
+        - "9000:9000"
+        - "12201:12201"
+        - "12202:12202"
+        - "12203:12203"
