--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,3 @@
 
 msg.bet.betting.error.passwordMismatch = Das neue Passwort stimmt nicht mit der Passwortwiederholung \u00FCberein!
+msg.invalidTeamResult                  = Die Ergebniseingabe ist ung\u00FCltig!
