refactoring creating and editing match

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,6 @@
 
 msg.bet.betting.error.passwordMismatch = Das neue Passwort stimmt nicht mit der Passwortwiederholung \u00FCberein!
+msg.input.countries.and.teamNames      = Nur Landesauswahl oder Teamnamen erlaubt!
+msg.input.same.teams                   = Ein Team kann nicht gegen sich selbst spielen!
+msg.input.teamOne.teamTwo              = Bitte geben Sie den Namen f\u00FCr Team 1 und Team 2 an!
 msg.invalidTeamResult                  = Die Ergebniseingabe ist ung\u00FCltig!
