migration to spring boot 2.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.thymeleaf.cache=true
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 
-liquibase.enabled=true
-liquibase.change-log=classpath:db/changelog/liquibase-changelog.xml
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/liquibase-changelog.xml
 
 spring.h2.console.enabled=false
 
@@ -12,12 +12,12 @@ spring.h2.console.enabled=false
 spring.jpa.hibernate.ddl-auto=none
 
 # for actuator
-management.context-path=/manage
+management.server.servlet.context-path=/manage
 
 # Session timeout in seconds. For testing
 # server.session.timeout=1
 
-spring.http.multipart.max-file-size=10MB
+spring.servlet.multipart.max-file-size=10MB
 
 # Set the access key and secret key with these environment variables as system properties if you use S3 but are outside of an EC2 instance.
 #cloud.aws.credentials.accessKey=
