--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
-			<version>3.3.6</version>
+			<version>3.3.7-1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
