--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -1,6 +1,6 @@
 spring.thymeleaf.cache=false
 
-liquibase.enabled=false
+spring.liquibase.enabled=true
 
 fredbet.database-url=jdbc:mysql://localhost:3306/fredbet
 fredbet.database-username=fredbet
