bugfix spring.datasource.type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.thymeleaf.cache=true
 
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 
