updated database configuration

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,8 +4,8 @@ spring.thymeleaf.cache=false
 # connect in console (http://localhost:8080/console) with jdbcUrl: jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 
-fredbet.database-url=jdbc:h2:mem:fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-# fredbet.database-url=jdbc:h2:file:~/fredbet/fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-fredbet.database-username=sa
-fredbet.database-password=
-fredbet.database-type=h2
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.hikari.jdbc-url=jdbc:h2:file:~/fredbet/fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.hikari.username=sa
+spring.datasource.hikari.password=
+spring.datasource.hikari.driver-class-name=org.h2.Driver
