--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -2,7 +2,7 @@ spring.thymeleaf.cache=false
 
 spring.liquibase.enabled=true
 
-fredbet.database-url=jdbc:mysql://localhost:3306/fredbet
-fredbet.database-username=fredbet
-fredbet.database-password=fredbet
-fredbet.database-type=mysql
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/fredbet
+spring.datasource.hikari.username=fredbet
+spring.datasource.hikari.password=fredbet
+spring.datasource.hikari.driver-class-name=com.mysql.jdbc.Driver
