--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,6 @@
 spring.h2.console.enabled=false
 
-# you should enable this profile and set these properties
-fredbet.database-url=
-fredbet.database-username=
-fredbet.database-password=
-fredbet.database-type=mysql
+spring.datasource.hikari.jdbc-url=
+spring.datasource.hikari.username=
+spring.datasource.hikari.password=
+spring.datasource.hikari.driver-class-name=com.mysql.jdbc.Driver
