disabled open session in view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,8 @@ cloud.aws.stack.auto=false
 cloud.aws.credentials.instanceProfile = true
 cloud.aws.credentials.profileName = ecsInstanceRole
 
+spring.jpa.open-in-view=false
+
 # -------- fredbet properties ------------------------------------------------------------------------------
 
 fredbet.image-size=1920
