--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ cloud.aws.stack.auto=false
 cloud.aws.credentials.instanceProfile = true
 cloud.aws.credentials.profileName = ecsInstanceRole
 
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 
 # -------- fredbet properties ------------------------------------------------------------------------------
 
