update settings for using h2 console in dev profile

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,8 @@ spring.thymeleaf.cache=false
 # connect in console (http://localhost:8080/console) with jdbcUrl: jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 
+spring.h2.console.settings.web-allow-others=true
+
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.hikari.jdbc-url=jdbc:h2:file:~/fredbet/fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.hikari.username=sa
