--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,6 +1,8 @@
 
-msg.bet.betting.error.passwordMismatch = Das neue Passwort stimmt nicht mit der Passwortwiederholung \u00FCberein!
-msg.input.countries.and.teamNames      = Nur Landesauswahl oder Teamnamen erlaubt!
-msg.input.same.teams                   = Ein Team kann nicht gegen sich selbst spielen!
-msg.input.teamOne.teamTwo              = Bitte geben Sie einen Namen f\u00FCr Team 1 und Team 2 an!
-msg.invalidTeamResult                  = Die Ergebniseingabe ist ung\u00FCltig!
+msg.bet.betting.error.passwordMismatch      = Das neue Passwort stimmt nicht mit der Passwortwiederholung \u00FCberein!
+msg.input.countries.and.teamNames           = Nur Landesauswahl oder Teamnamen erlaubt!
+msg.input.same.teams                        = Ein Team kann nicht gegen sich selbst spielen!
+msg.input.teamOne.teamTwo                   = Bitte geben Sie einen Namen f\u00FCr Team 1 und Team 2 an!
+msg.invalidTeamResult                       = Die Ergebniseingabe ist ung\u00FCltig!
+msg.passwordChange.oldAndNewPasswordAreSame = Sie d\u00FCrfen als neues Passwort nicht ihr altes verwenden!
+msg.passwordChange.passwordMismatch         = Das neue Passwort stimmt nicht mit der Wiederholung \u00FCberein!
