changed default validation message

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,4 +1,6 @@
 
+javax.validation.constraints.NotNull.message = darf nicht leer sein
+
 msg.bet.betting.error.passwordMismatch      = Das neue Passwort stimmt nicht mit der Passwortwiederholung \u00FCberein!
 msg.input.countries.and.teamNames           = Nur Landesauswahl oder Teamnamen erlaubt!
 msg.input.same.teams                        = Ein Team kann nicht gegen sich selbst spielen!
