bugfix docker-compose files

--- a/src/docker/docker-compose/mariadb_haproxy.yml
+++ b/src/docker/docker-compose/mariadb_haproxy.yml
@@ -34,7 +34,7 @@ services:
     environment:
     - spring.profiles.active=prod
     - fredbet.database-type=maria-db
-    - FREDBET_DATABASE-URL=jdbc:mariadb://mariadb:3306/fredbetdb
-    - FREDBET_DATABASE-USERNAME=fred
-    - FREDBET_DATABASE-PASSWORD=fred
-    
+    - SPRING_DATASOURCE_HIKARI_JDBC_URL=jdbc:mariadb://mariadb:3306/fredbetdb
+    - SPRING_DATASOURCE_HIKARI_USERNAME=fred
+    - SPRING_DATASOURCE_HIKARI_PASSWORD=fred
+    - SPRING_DATASOURCE_HIKARI_DRIVER_CLASS_NAME=org.mariadb.jdbc.Driver
