--- a/src/docker/docker-compose/mysql.yml
+++ b/src/docker/docker-compose/mysql.yml
@@ -22,10 +22,10 @@ services:
         - "8081:8080"
       environment:
        - SPRING_PROFILES_ACTIVE=prod
-       - FREDBET_DATABASE_URL=jdbc:mysql://mysqldb:3306/fredbetdb
-       - FREDBET_DATABASE_USERNAME=fred
-       - FREDBET_DATABASE_PASSWORD=fred
-       - FREDBET_DATABASE_TYPE=mysql
+       - SPRING_DATASOURCE_HIKARI_JDBC_URL=jdbc:mysql://mysqldb:3306/fredbetdb
+       - SPRING_DATASOURCE_HIKARI_USERNAME=fred
+       - SPRING_DATASOURCE_HIKARI_PASSWORD=fred
+       - SPRING_DATASOURCE_HIKARI_DRIVER_CLASS_NAME=com.mysql.jdbc.Driver
       networks:
        - default
 
