--- a/src/docker/docker-compose/postgresql.yml
+++ b/src/docker/docker-compose/postgresql.yml
@@ -20,7 +20,7 @@ services:
         - "8080:8080"
       environment:
        - SPRING_PROFILES_ACTIVE=prod
-       - FREDBET_DATABASE_TYPE=postgres
-       - FREDBET_DATABASE_URL=jdbc:postgresql://postgres:5432/fredbetdb
-       - FREDBET_DATABASE_USERNAME=fred
-       - FREDBET_DATABASE_PASSWORD=fred
+       - SPRING_DATASOURCE_HIKARI_JDBC_URL=jdbc:postgresql://postgres:5432/fredbetdb
+       - SPRING_DATASOURCE_HIKARI_USERNAME=fred
+       - SPRING_DATASOURCE_HIKARI_PASSWORD=fred
+       - SPRING_DATASOURCE_HIKARI_DRIVER_CLASS_NAME=org.postgresql.Driver
