--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,14 +18,6 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.servlet.multipart.max-file-size=10MB
 
-# Set the access key and secret key with these environment variables as system properties if you use S3 but are outside of an EC2 instance.
-#cloud.aws.credentials.accessKey=
-#cloud.aws.credentials.secretKey=
-cloud.aws.region.static=eu-central-1
-cloud.aws.stack.auto=false
-cloud.aws.credentials.instanceProfile = true
-cloud.aws.credentials.profileName = ecsInstanceRole
-
 spring.jpa.open-in-view=true
 
 # -------- fredbet properties ------------------------------------------------------------------------------
@@ -38,3 +30,6 @@ fredbet.image-location=FILE_SYSTEM
 fredbet.image-file-system-base-folder=
 
 fredbet.aws-s3bucket-name=fredbet
+fredbet.aws-access-key=XXX
+fredbet.aws-secret-key=XXX
+fredbet.aws-region=eu-central-1
