download images from S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,6 @@ fredbet.image-location=FILE_SYSTEM
 fredbet.image-file-system-base-folder=
 
 fredbet.aws-s3bucket-name=fredbet
-fredbet.aws-access-key=XXX
-fredbet.aws-secret-key=XXX
+fredbet.aws-access-key=
+fredbet.aws-secret-key=
 fredbet.aws-region=eu-central-1
