chang locale to be configurable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,5 @@ fredbet.aws-s3bucket-name=fredbet
 fredbet.aws-access-key=
 fredbet.aws-secret-key=
 fredbet.aws-region=eu-central-1
+
+fredbet.default-language=de
