cleanup config; change to logback

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,7 @@ spring.thymeleaf.cache=false
 
 # connect in console (http://localhost:8080/console) with jdbcUrl: jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
+spring.h2.console.path=/console
 
 spring.h2.console.settings.web-allow-others=true
 
