change actuator to port 5555

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,11 @@ spring.servlet.multipart.max-file-size=10MB
 
 spring.jpa.open-in-view=true
 
+# metrics configuration
+management.server.port=5555
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.enabled=true
+
 # -------- fredbet properties ------------------------------------------------------------------------------
 
 fredbet.image-size=1920
