--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.h2.console.enabled=false
 # possible values: none, validate, update, create, create-drop
 spring.jpa.hibernate.ddl-auto=none
 
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
 # Session timeout in seconds. For testing
 # server.session.timeout=1
 
