cleanup; disabled JMX

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,11 +23,13 @@ spring:
   servlet:
     multipart:
       max-file-size: 10MB
+  jmx:
+    enabled: false
 
 # metrics configuration
 management:
-  server:
-    port: 5555
+#  server:
+#    port: 5555
   endpoints:
     web:
       base-path: /actuator
