--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,15 @@
-cache:
-  directories:
-  - "$HOME/.m2/repository"
 sudo: required
 services:
   - docker
-language: java
-jdk:
-- oraclejdk11
-install:
-- mvn verify
+before_install:
+  - docker build -t fred4jupiter/fredbet .
+  - docker tag fred4jupiter/fredbet fred4jupiter/fredbet:latest
+  - docker login -u $DOCKER_USER -p $DOCKER_PASS
+  - docker push fred4jupiter/fredbet:latest
 deploy:
   provider: heroku
   api_key:
     secure: $HEROKU_AUTH_TOKEN
-# safelist
 branches:
   only:
   - master
-after_success:
-  - docker login -u $DOCKER_USER -p $DOCKER_PASS
-  - docker build -t fred4jupiter/fredbet .  
-  - docker tag fred4jupiter/fredbet fred4jupiter/fredbet:latest  
-  - docker push fred4jupiter/fredbet:latest
