--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: required
 services:
   - docker
+language: java
 before_install:
   - docker build -t fred4jupiter/fredbet .
   - docker tag fred4jupiter/fredbet fred4jupiter/fredbet:latest
