--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 language: java
-before_install:
+install:
   - docker build -t fred4jupiter/fredbet .
   - docker tag fred4jupiter/fredbet fred4jupiter/fredbet:latest
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
