--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 services:
   - docker
-language: generic
+language: shell
 install:
   - docker build -t fred4jupiter/fredbet .
 before_deploy:
