--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,24 @@
+cache:
+  directories:
+    - "$HOME/.m2/repository"
 sudo: required
 services:
   - docker
-script:
-  - docker version
-before_deploy:
-  - docker build -t fred4jupiter/fredbet .
-  - docker login -u $DOCKER_USER -p $DOCKER_PASS
-  - docker tag fred4jupiter/fredbet fred4jupiter/fredbet:latest
-  - docker push fred4jupiter/fredbet:latest
+language: java
+jdk:
+  - oraclejdk11
+install:
+  - mvn verify
 deploy:
   provider: heroku
   api_key:
     secure: $HEROKU_AUTH_TOKEN
+# safelist
 branches:
   only:
-  - master
-cache:
-  directories:
-    ~/docker
+    - master
+after_success:
+  - docker -f Dockerfile-single login -u $DOCKER_USER -p $DOCKER_PASS
+  - docker -f Dockerfile-single build -t fred4jupiter/fredbet .
+  - docker -f Dockerfile-single tag fred4jupiter/fredbet fred4jupiter/fredbet:latest
+  - docker -f Dockerfile-single push fred4jupiter/fredbet:latest
