--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ language: java
 jdk:
   - oraclejdk11
 install: true
-script: mvn verify
+script: ./mvnw clean install
 #deploy:
 #  provider: heroku
 #  api_key:
